adjust
Signed-off-by: chenqw <gdnpc@163.com>